fixing home.html
+fixing to work on multiple device
-?

--- a/home.html
+++ b/home.html
@@ -12,8 +12,8 @@
   </head>
   <body style="height: 10000px">
     <header class="header" id="header">
-      <div class="col-sm-6 col-md-8">random image</div>
-      <nav class="col-sm-6 col-md-4" id="nav-bar">
+      <div class="">random image</div>
+      <nav class="" id="nav-bar">
         <a href="home.html">Home</a>
         <a href="">About Us</a>
         <a href="">Pricing</a>
