--- a/home.html
+++ b/home.html
@@ -23,6 +23,22 @@
         <a href="">Contact</a>
       </nav>
     </header>
+    <nav id="mobile-vertical-navbar">
+      <img
+        src="vertical_menu_button.png"
+        id="vertical-menu-button"
+        onclick="showVerticalNavbar()"
+      />
+      <div id="hidden-vertical-navbar">
+        <a href="home.html">Home</a>
+        <a href="">About Us</a>
+        <a href="">Pricing</a>
+        <a href="">My Account</a>
+        <a href="">Browse</a>
+        <a href="">FAQs</a>
+        <a href="">Contact</a>
+      </div>
+    </nav>
     <img src="banner.png" id="banner" />
     <script src="general.js"></script>
   </body>
