Update home page
+ Add page detail and slogan

--- a/home.html
+++ b/home.html
@@ -39,7 +39,14 @@
         <a href="">Contact</a>
       </div>
     </nav>
-    <img src="banner.png" id="banner" />
+    <div>
+      <img src="banner.png" id="banner" />
+      <div id="image-container">
+        <h1>Your App Name</h1>
+        <h4>Your Slogan here here <br>  your slogan your slogan here</h2>
+      </div>
+    </div>
+
     <script src="general.js"></script>
   </body>
 </html>
