Seperate the header into different file
+ Basically working
- The scroll function and some CSS of header is not working

--- a/home.html
+++ b/home.html
@@ -7,45 +7,22 @@
       rel="stylesheet"
       href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
     />
-    <link rel="stylesheet" href="general.css" />
+    <link rel="stylesheet" href="home.css" />
+    <link rel="stylesheet" href="header.css"/>
     <title>Document</title>
   </head>
   <body style="height: 10000px">
-    <header class="header" id="header">
-      <div class="">random image</div>
-      <nav class="" id="nav-bar">
-        <a href="home.html">Home</a>
-        <a href="">About Us</a>
-        <a href="">Pricing</a>
-        <a href="">My Account</a>
-        <a href="">Browse</a>
-        <a href="">FAQs</a>
-        <a href="">Contact</a>
-      </nav>
-    </header>
-    <nav id="mobile-vertical-navbar">
-      <img
-        src="vertical_menu_button.png"
-        id="vertical-menu-button"
-        onclick="showVerticalNavbar()"
-      />
-      <div id="hidden-vertical-navbar">
-        <a href="home.html">Home</a>
-        <a href="">About Us</a>
-        <a href="">Pricing</a>
-        <a href="">My Account</a>
-        <a href="">Browse</a>
-        <a href="">FAQs</a>
-        <a href="">Contact</a>
-      </div>
-    </nav>
-    <div>
-      <img src="banner.png" id="banner" />
-      <div id="image-container">
-        <h1>Your App Name</h1>
-        <h4>Your Slogan here here <br>  your slogan your slogan here</h2>
-      </div>
+    <div id="body-container">
+      <embed type="text/html" src="header.html">
+        <div>
+          <img src="banner.png" id="banner" />
+          <div id="image-container">
+            <h1>Your App Name</h1>
+            <h4>Your Slogan here here <br>  your slogan your slogan here</h2>
+          </div>
+        </div>
     </div>
+   
 
     <script src="general.js"></script>
   </body>
